<resources>
    <string name="app_name">Eventease</string>
    <string name="event_ease">EventEase</string>
    <string name="dots">...</string>
    <string name="sign_in_title">Sign in to manage your events</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="have_account">Already have an account? Sign In</string>
    <string name="create_account">Create your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_events">My Events</string>
    <string name="add_event">Add Event</string>
    <string name="add_event_to_card">Add Event To The Card</string>
    <string name="event_title">Event Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="user_info">User Info</string>
    <string name="edit_info">Edit Info</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_confirm">Sign Out?</string>
    <string name="sign_out_message">Are you sure you want to sign out? You\'ll need to sign in again to access your events.</string>
    <string name="edit_user_info">Edit User Info</string>
    <string name="next">Next</string>
    <string name="developer_info">Developer Info</string>
    <string name="dev_name">Heshara Sandeepa</string>
    <string name="student_id">Student No: 2023t01866</string>
    <string name="dev_desc">Passionate mobile developer dedicated to creating intuitive and user-friendly applications that solve real-world problems. EventEase represents my commitment to simplifying event management for everyone.</string>
    <string name="release_version">Release Version: v1.0.0</string>
    <string name="build_date">Build Date: March 23, 2026</string>
    <string name="exit_application">Exit Application</string>
    <string name="copyright">© 2024 EventEase. All rights reserved. Developed with ❤️ using Java &amp; Material Design</string>
</resources>